Fix top bar buttons overflowing

--- a/src/global.css
+++ b/src/global.css
@@ -216,6 +216,7 @@
 	justify-content: center;
 	gap: 0.5rem;
 	text-align: center;
+	text-wrap: nowrap;
 	transition:
 		border-color 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
 		color 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
